--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   audio_waveforms: ^1.0.4
   flutter_audio_waveforms: ^1.2.1+8
   path_provider: ^2.1.1
+  firebase_auth: ^4.15.3
 
 dev_dependencies:
   flutter_test:
