--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_audio_waveforms: ^1.2.1+8
   path_provider: ^2.1.1
   firebase_auth: ^4.15.3
+  get: ^4.6.6
+  velocity_x: ^4.1.2
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/icons/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
